--- a/data/nav.yml
+++ b/data/nav.yml
@@ -88,7 +88,7 @@
       path:  "/community/3rd-party-extensions"
     -
       title: "Forum"
-      path:  "http://convore.com/middleman"
+      path:  "http://forum.middlemanapp.com/"
     -
       title: "Wiki"
       path:  "https://github.com/middleman/middleman/wiki"
