--- a/data/nav.yml
+++ b/data/nav.yml
@@ -32,6 +32,9 @@
   desc: "Structured data about pages"
   pages: 
     -
+      title: "The Sitemap"
+      path: "/metadata/sitemap"
+    -
       title: "Individual Page Configuration"
       path:  "/metadata/yaml-frontmatter"
     -
