Add a "Code" category with links to YARDocs and repositories

--- a/data/nav.yml
+++ b/data/nav.yml
@@ -64,7 +64,7 @@
       path:  "/advanced/speeding-up"
 -
   name: "Extensions"
-  desc: "WARNING: EXTENSIONS NOT UPGRADED TO 3.0 YET"
+  desc: "WARNING: NOT ALL EXTENSION ARE UPGRADED TO 3.0 YET"
   pages:
     -
       title: "Custom Extensions"
@@ -98,3 +98,13 @@
     -
       title: "Wiki"
       path:  "https://github.com/middleman/middleman/wiki"
+-
+  name: "Code"
+  desc: "Source code and code docs"
+  pages:
+    -
+      title: "Repositories"
+      path:  "https://github.com/middleman/"
+    -
+      title: "Code Documentation"
+      path:  "http://rubydoc.info/find/github?q=middleman"
