update donation link

--- a/data/nav.yml
+++ b/data/nav.yml
@@ -27,5 +27,5 @@
       title: "Forum"
       path:  "http://forum.middlemanapp.com/"
     -
-      title: "Wiki"
-      path:  "https://github.com/middleman/middleman/wiki"
+      title: "Support The Team With a Donation"
+      path:  "https://spb.io/s/4dXbHBorC3"
