--- a/data/sites.yml
+++ b/data/sites.yml
@@ -77,6 +77,7 @@ built:
   - url: http://rubyconferences.org
     source: https://github.com/ruby-conferences/ruby-conferences-site
   - url: http://theartificial.nl/
+  - url: http://www.vpsland.com
 mobile:
   - url: http://pollev.com
 blogs:
