--- a/data/sites.yml
+++ b/data/sites.yml
@@ -122,3 +122,4 @@ blogs:
     source: https://github.com/FearMediocrity/fearmediocrity.co.uk
   - url: http://lord.io
     source: https://github.com/lord/blog
+  - url: http://blog.glebm.com/
