adds fraudrankr.com

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -82,6 +82,7 @@ built:
   - url: http://docs.fraudrankr.com/
   - url: http://waterforpeople.org
   - url: http://www.viselectrica.it
+  - url: http://www.fraudrankr.com/
 mobile:
   - url: http://pollev.com
 blogs:
