Adding Ausca to your list
Hola, adding ausca.com ruby gem which uses middleman for quick n easy deployment. Thanks :)

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -83,6 +83,7 @@ built:
   - url: http://waterforpeople.org
   - url: http://www.viselectrica.it
   - url: http://www.shannonethomas.com/
+  - url: http://ausca.com
 mobile:
   - url: http://pollev.com
 blogs:
