Added initial Directory Structure docs: middleman-guides/issues#61 Added Sourcey and source code to "Built Using Middleman"

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -84,6 +84,8 @@ built:
   - url: http://www.viselectrica.it
   - url: http://www.shannonethomas.com/
   - url: http://ausca.com
+  - url: http://sourcey.com
+    source: https://github.com/sourcey/sourcey.com
 mobile:
   - url: http://pollev.com
 blogs:
