--- a/data/sites.yml
+++ b/data/sites.yml
@@ -131,3 +131,4 @@ blogs:
   - url: http://blog.glebm.com/
   - url: http://www.sudandola.com
   - url: http://www.4l3c.org
+  - url: http://davidmles.com
