Added FrontCube site

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,5 @@
 built:
+  - url: http://frontcube.com
   - url: http://www.theverge.com/a/the-verge-50/intro
   - url: http://dahal.co
   - url: http://sass-lang.com
