--- a/data/sites.yml
+++ b/data/sites.yml
@@ -140,3 +140,4 @@ blogs:
   - url: http://www.4l3c.org
   - url: http://davidmles.com
   - url: https://blog.rainforestqa.com/
+  - url: hhttp://ravisuhag.github.io/ravisuhag.com/
