Updating Website URL

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,5 +1,5 @@
 built:
-  - url: hhttp://ravisuhag.github.io/ravisuhag.com/
+  - url: http://ravisuhag.com/
   - url: http://www.theverge.com/a/the-verge-50/intro
   - url: http://dahal.co
   - url: http://sass-lang.com
