Add the Mangrove website to site list

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,5 @@
 built:
+  - url: http://www.mangrove.com
   - url: http://mokaproject.com/
   - url: http://frontcube.com
   - url: http://ravisuhag.com/
