--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
 - 2.1.1
-script: bundle exec middleman build
+script: bundle exec middleman build --verbose
 deploy:
   provider: divshot
   environment:
