--- a/data/sites.yml
+++ b/data/sites.yml
@@ -107,6 +107,7 @@ built:
 mobile:
   - url: http://pollev.com
 blogs:
+  - url: https://www.simple.com/blog
   - url: http://snwh.org/
   - url: http://awardwinningfjords.com
   - url: http://blog.troutwine.us
