Launched Cascading Media's new website last week. Built with Middleman, Foundation, jQuery and Modernizr.

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,5 @@
 built:
+  - url: http://cascadingmedia.com
   - url: https://www.simple.com
   - url: http://prototype-interactive.com/
   - url: http://www.mangrove.com
