Fixed one typo and added one blog to Sites section
Minor typo in "Basics/Asset pipeline". Also added blog made with
middleman-blog, to "Community/Sites" section.

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -159,4 +159,5 @@ blogs:
     source: https://github.com/syui/middleman-simple-template
   - url: https://chareice.com
   - url: http://www.ecosio.com/de/blog
+  - url: http://apetyt-na-kuchnie.pl
 
