Add alohafishmans.com to sites.yml

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -107,6 +107,7 @@ built:
   - url: http://distantfutu.re
     source: https://github.com/sgehrman/distantfuture
   - url: http://www.ecosio.com
+  - url: http://alohafishmans.com
 mobile:
   - url: http://pollev.com
 blogs:
