Update URL in Blogs Using Middleman.

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -134,7 +134,7 @@ blogs:
   - url: http://stevenosloan.com
   - url: http://4pdj.nl
     source: https://github.com/nathema/4pdj.nl
-  - url: http://Andrew.Kvalhe.im
+  - url: https://Andrew.Kvalhe.im
   - url: http://epochwolf.com
   - url: http://www.adevelopingstory.com
   - url: http://oli-g.me
