add my new blog to sites.yml
I just added my blog to the list of sites using middleman :)

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -8,6 +8,8 @@ built:
   - url: http://ravisuhag.com/
   - url: http://www.theverge.com/a/the-verge-50/intro
   - url: http://dahal.co
+  - url: http://noconformity.com/
+    source: https://github.com/chrishough/myblog
   - url: http://sass-lang.com
     source: https://github.com/sass/sass-site
   - url: http://startexploding.com
