--- a/data/sites.yml
+++ b/data/sites.yml
@@ -110,6 +110,7 @@ built:
     source: https://github.com/sgehrman/distantfuture
   - url: http://www.ecosio.com
   - url: http://alohafishmans.com
+  - url: http://pomocni.owocni.org
 mobile:
   - url: http://pollev.com
 blogs:
