--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,7 +1,7 @@
 built:
   - url: http://cascadingmedia.com
   - url: https://www.simple.com
-  - title: "Simple"
+    title: "Simple"
   - url: http://prototype-interactive.com/
   - url: http://www.mangrove.com
   - url: http://mokaproject.com/
