Adds my url to the list of sites

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -176,3 +176,5 @@ blogs:
   - url: http://hans.gerwitz.com/
     title: "Hans Gerwitz"
     source: https://github.com/gerwitz/hans.gerwitz.com
+  - url: http://nicholasjohnson.com/
+    title: "Nicholas Johnson"
