Add http://dojo4.com to sites.yml

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: http://dojo4.com
+    title: DOJO4
   - url: http://doorman.it
     title: Doorman - Evening Package Delivery on Request
   - url: http://crazydesigns.co.uk
