--- a/data/sites.yml
+++ b/data/sites.yml
@@ -205,3 +205,5 @@ blogs:
     source: https://github.com/jacbac/bibliotech
   - url: http://benjamintan.io/blog
     title: Benjamin Tan – Learnings and Writings
+  - url: https://sitevalidator.com
+    title: Site Validator
