Add gunpowderlabs to sites built with middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,5 @@
 built:
+  - url: http://gunpowderlabs.com/
   - url: http://hockeyapp.net/features/
     title: "HockeyApp"
   - url: http://dojo4.com
