Added 3 middleman sites to the list

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -218,3 +218,9 @@ blogs:
   - url: https://nhutdm.com
     title: "NhutDM"
     source: https://github.com/nhutdm/nhutdm.github.io
+  - url: http://vaporwa.re/
+    title: "Vaporware Inc."
+  - url: http://www.tootdeck.com/
+    title: "TootDeck"
+  - url: http://parkland.io/
+    title: "The Parkland"
