Add new middleman sites

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,10 @@
 built:
+  - url: http://thisiscapra.com/
+    title: "Capra Design"
+    source: https://github.com/thisiscapra/thisiscapra.com
+  - url: http://hiphopquoted.com/
+    title: "Hip-Hop Quoted"
+    source: https://github.com/olliekav/hiphopquoted.com
   - url: http://gunpowderlabs.com/
   - url: http://hockeyapp.net/features/
     title: "HockeyApp"
