--- a/data/sites.yml
+++ b/data/sites.yml
@@ -233,3 +233,5 @@ blogs:
   - url: http://davidl.fr
     title: "davidl.fr - Front-end advices and best practices (in french)"
     source: https://github.com/flexbox/davidl
+  - url: http://www.clearhaus.com/
+    title: "Clearhaus"
