--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: http://www.eventxtra.com
+    title: "EventXtra - Simple, Impactful, event last forever"
   - url: http://flammlachs.de
     title: "Delicious fire broiled fish speciality"
   - url: http://thisiscapra.com/
