Add staging deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ deploy:
   provider: divshot
   environment:
     master: production
+    dev: staging
   skip_cleanup: true
   api_key:
     secure: BPQaBH0EMFjZuLZewOD36B9LTjRpPFbTmv7ler/GwEu2wtp77xzhGTUTAt3J/rjrAUiPjHCg+s0j9TbBzrmNmk91kWmF1JYRUFzf8gGIFpWgIM6IarKjFGmYamcZMDXvWK165IjfhcfYJv+eS+MjGwUNdbF1o8IzrjzwyybDoB0=
