Adding ZoomShift to middleman sites.

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -252,3 +252,5 @@ blogs:
     source: https://github.com/flexbox/davidl
   - url: http://www.clearhaus.com/
     title: "Clearhaus"
+  - url: http://www.zoomshift.com/
+    title: "ZoomShift - Employee Scheduling Software"
