Updates to sites.yml
Added Create the Bridge and 26 Gems to the Built List.

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -155,6 +155,10 @@ built:
     title: "Mojaveapp"
   - url: http://www.cheapboardgamer.com
     title: "the Cheap Boardgamer"
+  - url: http://www.createthebridge.com
+    title: "Create the Bridge"
+  - url: http://www.26gems.io
+    title: "26 Gems"
 mobile:
   - url: http://pollev.com
 blogs:
