--- a/data/sites.yml
+++ b/data/sites.yml
@@ -277,3 +277,7 @@ blogs:
     title: "Turing Incomplete - A Podcast About Programming"
   - url: https://www.fedux.org
     title: "fedux.org - Lovely crafted ideas"
+  - url: http://bidah.github.io/blog
+    title: "BIDAH'S DIGITAL CRIB"
+    
+
