--- a/data/sites.yml
+++ b/data/sites.yml
@@ -178,6 +178,12 @@ built:
     title: "e2esound.com"
   - url: http://smahr.net
     title: "Scott Mahr"
+  - url: http://ict4g.fbk.eu/
+    title: "ICT4G - FBK"
+  - url: http://spmbook.com/
+    title: "spmbook"
+  - url: http://www.ict4g.net/adolfo/
+    title: "Adolfo Villafiorita's Home Page"
 mobile:
   - url: http://pollev.com
 blogs:
