Add mizukiabe.net to sites.yml

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -306,4 +306,5 @@ blogs:
   - url: http://vyber-tydne.kle.cz
     title: "Výběr týdne"
     source: https://github.com/petrkle/vyber-tydne
-
+  - url: http://mizukiabe.net
+    title: "mizukiabe.net"
