Add EcoTa.co to companies using middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -184,6 +184,8 @@ built:
     title: "spmbook"
   - url: http://www.ict4g.net/adolfo/
     title: "Adolfo Villafiorita's Home Page"
+  - url: http://ecota.co
+    title: "EcoTa.co - book a mini cab"
   - url: http://www.nishanths.me
     title: "Nishanth Shanmugham"
     source: https://github.com/nishanths/nishanths.github.io
