Added meXBT to sites using middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -318,3 +318,5 @@ blogs:
     source: https://github.com/petrkle/vyber-tydne
   - url: http://mizukiabe.net
     title: "mizukiabe.net"
+  - url: https://mexbt.com
+    title: "meXBT: Mexican Bitcoin Exchange"
