--- a/data/sites.yml
+++ b/data/sites.yml
@@ -200,6 +200,7 @@ built:
 mobile:
   - url: http://pollev.com
 blogs:
+  - url: http://www.downrightlies.net
   - url: http://richardkall.se
     title: "Richard Käll"
     source: https://github.com/richardkall/richardkall.se
