Added funio.com to compagnies using middleman and built with page

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -197,6 +197,8 @@ built:
   - url: http://www.nishanths.me
     title: "Nishanth Shanmugham"
     source: https://github.com/nishanths/nishanths.github.io
+  - url: https://funio.com
+    title: "Funio Web Hosting"
 mobile:
   - url: http://pollev.com
 blogs:
