Add bakecalc and polytronixglass to sites.yml

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,8 @@
 built:
+  - url: http://bakecalc.com/
+    title: "BakeCalc"
+  - url: http://polytronixglass.com/
+    title: "Polytronix Glass"
   - url: http://htmlarrows.com/
     title: "HTML Arrows"
   - url: http://madtreebrewing.com/
