Added Smartcoin website info
made with middleman ;)

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://smartcoin.com.br/
+    title: "Smartcoin - Web Payments"
   - url: http://bakecalc.com/
     title: "BakeCalc"
   - url: http://polytronixglass.com/
