--- a/data/sites.yml
+++ b/data/sites.yml
@@ -47,6 +47,8 @@ built:
   - url: http://prototype-interactive.com/
   - url: http://www.mangrove.com
   - url: http://mokaproject.com/
+  - url: http://mountainscreen.com/
+    title: "Mountainscreen"
   - url: http://frontcube.com
   - url: http://ravisuhag.com/
   - url: http://www.theverge.com/a/the-verge-50/intro
