--- a/data/sites.yml
+++ b/data/sites.yml
@@ -209,6 +209,9 @@ built:
     title: "Funio Web Hosting"
   - url: http://summit.nativeadvertising.com
     title: The Native Advertising Summit
+  - url: https://laurendorman.io
+    title: "Lauren Dorman"
+    source: https://github.com/laurendorman/laurendorman.github.io/tree/dev
 mobile:
   - url: http://pollev.com
 blogs:
