Add startae.com to sites made with Middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: http://www.startae.com
+    title: "Startaê - We’re your UX Design Team on demand"
   - url: http://www.nickholden.io
     source: https://github.com/nholden/nickholdenio
   - url: https://smartcoin.com.br/
