Add site to sites.yml

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -347,3 +347,5 @@ blogs:
     title: Sharethrough Engineering
   - url: http://www.valiantghost.com/
     title: Valiant Ghost
+  - url: http://aranair.github.io
+    title: "Boa Ho Man"
