--- a/data/sites.yml
+++ b/data/sites.yml
@@ -349,3 +349,4 @@ blogs:
     title: Valiant Ghost
   - url: http://aranair.github.io
     title: "Boa Ho Man"
+    source: https://github.com/aranair/aranair.github.io
