--- a/data/sites.yml
+++ b/data/sites.yml
@@ -366,3 +366,7 @@ blogs:
     source: https://github.com/nowifisummercamp/nowifisummercamp.github.io
   - url: http://www.webuildinternet.com
     title: We Build Internet
+  - url: http://kdavi.es/
+    title: Kieren Davies
+    source: https://github.com/kierendavies/kdavi.es
+
