Add BlockScore blog to sites.yml

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -369,4 +369,5 @@ blogs:
   - url: http://kdavi.es/
     title: Kieren Davies
     source: https://github.com/kierendavies/kdavi.es
-
+  - url: http://blog.blockscore.com
+    title: BlockScore Blog
