Adds ashfurrow.com to built sites.

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -371,3 +371,6 @@ blogs:
     source: https://github.com/kierendavies/kdavi.es
   - url: http://blog.blockscore.com
     title: BlockScore Blog
+  - url: http://ashfurrow.com/
+    title: Ash Furrow
+    source: https://github.com/ashfurrow/blog
