Added HTML Color Codes

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: http://htmlcolorcodes.com/
+    title: "HTML Color Codes"
   - url: http://hull.io
     title: "Hull.io"
   - url: https://martinschurig.com
