--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: http://black.fri.uni-lj.si/metkock/
+    title: Met kock - Slovenska poezija v novih medijih
   - url: http://htmlcolorcodes.com/
     title: "HTML Color Codes"
   - url: http://hull.io
