Add Envy to list of Middleman sites

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -244,6 +244,8 @@ built:
   - url: http://www.krivoydesigner.com/
     title: "Sergey Krivoy | Web Designer from Saint P."
     source: https://github.com/nostrism/nostrism.github.io/tree/middleman
+  - url: http://madewithenvy.com
+    title: "Envy, a web consultancy"
 mobile:
   - url: http://pollev.com
 blogs:
