Add bodypil.de to sites

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://www.bodypil.de/
+    title: "Bodypil Zuckerpaste"
   - url: http://opensource.locaweb.com.br/locawebstyle/
     title: Documentation of Locaweb Style Framework
     source: https://github.com/locaweb/locawebstyle
