Link to our website, built using middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://software-berater.net/
+    title: Die Software Berater
   - url: https://www.bodypil.de/
     title: "Bodypil Zuckerpaste"
   - url: http://opensource.locaweb.com.br/locawebstyle/
