--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: http://joshlain.cz
+    title: Josh Laincz
   - url: https://software-berater.net/
     title: Die Software Berater
   - url: https://www.bodypil.de/
